# macaroon-decmed

./: Cargo.toml
src/: caveat.rs  crypto.rs  lib.rs  verifier.rs
src/serialization/: mod.rs  v1.rs  v2.rs  v2json.rs
tests/: compat_libmacaroons.rs  compat_pymacaroons.rs
