[package]
name = "macaroon"
version = "0.3.1-dev.0"
edition = "2021"
rust-version = "1.56"
authors = ["Jack Lund <jackl@geekheads.net>", "macaroon-rs Contributors"]
description = "Fully functional implementation of macaroons in Rust"
documentation = "https://docs.rs/macaroon"
repository = "https://github.com/macaroon-rs/macaroon"
keywords = ["macaroon", "cookies", "authorization", "credentials"]
categories = ["authentication", "cryptography"]
license = "MIT"

[dependencies]
# Crypto - replace sodiumoxide dengan pure Rust
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
chacha20poly1305 = "0.10"

# Updated dependencies
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
time = { version = "0.3", features = ["parsing"] }
